# templates

./: README
cpp/lib/: CMakeLists.txt  qiproject.xml
cpp/lib/@project_name@/: @project_name@.hpp  api.hpp
cpp/lib/@projectname@/: @projectname@.hpp  api.hpp
cpp/lib/src/: @projectname@.cpp
cpp/lib/test/: CMakeLists.txt  test_@projectname@.cpp
cpp/qiservice/: CMakeLists.txt  qiproject.xml
cpp/qiservice/@projectname@/: @projectname@.hpp
cpp/qiservice/src/: @projectname@impl.cpp  @projectname@impl.hpp
lib/: CMakeLists.txt  qiproject.xml
lib/src/: @project_name@.cpp
lib/test/: test_@project_name@.cpp
qiservice/: CMakeLists.txt
qiservice/src/: @projectname@_proxy.cpp  registration.cpp
